--- a/landing_page/‌index.html
+++ b/landing_page/‌index.html
@@ -13,6 +13,40 @@
 <link href="../landing_page/bootstrap.css" rel="stylesheet" type="text/css"/>
  </head>
  <body>
+         <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" datatarget="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.php">Lifestyle Store</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                <?php
+                if (isset($_SESSION['email'])) {
+                ?>
+                <li><a href = "cart.php"><span class = "glyphicon glyphicon-shoppingcart"></span> Cart </a></li>
+                <li><a href = "settings.php"><span class = "glyphicon glyphicon-user"></span>
+               Settings</a></li>
+                <li><a href = "logout_script.php"><span class = "glyphicon glyphicon-login"></span> Logout</a></li>
+               
+                <?php
+               } else {
+                ?>
+                <li><a href="signup.php"><span class="glyphicon glyphicon-user"></span>
+               Sign Up</a></li>
+                <li><a href="login.php"><span class="glyphicon glyphicon-log-in"></span>
+               Login</a></li>
+                <?php
+                }
+                ?>
+                </ul>
+                </div>
+                </div>
+               </div>
         <div class="banner-image">
                 <center>
                 <div class="container">
@@ -51,5 +85,13 @@
                  </div>
                 </div>
                 </div>
+         <footer>
+ <div class="container">
+ <center>
+ <p>Copyright &copy; Lifestyle Store. All Rights Reserved | Contact Us: +91 90000
+00000</p>
+ </center>
+ </div>
+</footer>
         </body>
         </html>
